Set up the Database connection and organized the files a bit

--- a/AutumnBlazorApp/AutumnBlazorApp.csproj
+++ b/AutumnBlazorApp/AutumnBlazorApp.csproj
@@ -11,6 +11,8 @@
 
   <ItemGroup>
     <ProjectReference Include="..\AutumnBlazorApp.Client\AutumnBlazorApp.Client.csproj" />
+    <ProjectReference Include="..\AutumnBlazorApp.Domain\AutumnBlazorApp.Domain.csproj" />
+    <ProjectReference Include="..\AutumnBlazorApp.Infrastructure\AutumnBlazorApp.Infrastructure.csproj" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="9.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Diagnostics.EntityFrameworkCore" Version="9.0.8" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="9.0.8" />
