--- a/AutumnBlazorApp/appsettings.Development.json
+++ b/AutumnBlazorApp/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=sql-server-db;Database=AutumnBlazorAppDB;User Id=sa;Password=265139Dn#$;TrustServerCertificate=True"
   }
 }
