--- a/AutumnBlazorApp/appsettings.Development.json
+++ b/AutumnBlazorApp/appsettings.Development.json
@@ -9,3 +9,5 @@
     "DefaultConnection": "Server=sql-server-db;Database=AutumnBlazorAppDB;User Id=sa;Password=265139Dn#$;TrustServerCertificate=True"
   }
 }
+//sql-server-db
+//localhost
