--- a/AutumnBlazorApp.Application/AutumnBlazorApp.Application.csproj
+++ b/AutumnBlazorApp.Application/AutumnBlazorApp.Application.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MediatR" Version="13.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\AutumnBlazorApp.Domain\AutumnBlazorApp.Domain.csproj" />
+    <ProjectReference Include="..\AutumnBlazorApp.Infrastructure\AutumnBlazorApp.Infrastructure.csproj" />
+    <ProjectReference Include="..\AutumnBlazorApp.Shared\AutumnBlazorApp.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
