--- a/AutumnBlazorApp.Client/AutumnBlazorApp.Client.csproj
+++ b/AutumnBlazorApp.Client/AutumnBlazorApp.Client.csproj
@@ -13,4 +13,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Authentication" Version="9.0.8" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\AutumnBlazorApp.Shared\AutumnBlazorApp.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
